--- a/cmangos/Crystalsong/mangosd.conf
+++ b/cmangos/Crystalsong/mangosd.conf
@@ -59,17 +59,17 @@ ConfVersion=2010100901
 #
 ###################################################################################################################
 
-RealmID = 4
+RealmID = 1
 DataDir = ".."
 LogsDir = ""
-LoginDatabaseInfo     = ".;1;root;1;wotlk_realm"
-WorldDatabaseInfo     = ".;2;root;1;wotlk_world"
-CharacterDatabaseInfo = ".;4;root;1;wotlk_characters_19"
+LoginDatabaseInfo     = ".;1;root;1;cmangos_realm"
+WorldDatabaseInfo     = ".;2;root;1;cmangos_world"
+CharacterDatabaseInfo = ".;4;root;1;cmangos_characters"
 LoginDatabaseConnections = 1
 WorldDatabaseConnections = 1
 CharacterDatabaseConnections = 1
 MaxPingTime = 30
-WorldServerPort = 8006
+WorldServerPort = 8003
 BindIP = "127.0.0.1"
 
 ###################################################################################################################
@@ -780,9 +780,9 @@ CharactersPerRealm = 10
 HeroicCharactersPerRealm = 3
 MinLevelForHeroicCharacterCreating = 55
 SkipCinematics = 0
-MaxPlayerLevel = 19
+MaxPlayerLevel = 80
 StartPlayerLevel = 1
-StartHeroicPlayerLevel = 19
+StartHeroicPlayerLevel = 55
 StartPlayerMoney = 0
 MaxHonorPoints = 75000
 StartHonorPoints = 0
