--- a/cmangos/Crystalsong/ahbot.conf
+++ b/cmangos/Crystalsong/ahbot.conf
@@ -5,6 +5,11 @@
 [AhbotConf]
 ConfVersion=2010102201
 
+###################################################################################################################
+# AUCTION HOUSE BOT SETTINGS
+#
+###################################################################################################################
+
 # Disable original AuctionHouseBot
 AuctionHouseBot.Seller.Enabled = 0
 AuctionHouseBot.Buyer.Enabled = 0
@@ -15,7 +20,9 @@ AhBot.Enabled = 1
 AhBot.Account = 6
 AhBot.GUID = 1
 
-AhBot.MaxItemLevel = 9999
+AhBot.MaxItemLevel = 199
+AhBot.MaxRequiredLevel = 80
+
 
 AhBot.PriceMultiplier = 1.0
 AhBot.DefaultMinPrice = 20
@@ -55,22 +62,21 @@ AhBot.PriceMultiplier.Sell.quiver = 1.0
 AhBot.PriceMultiplier.Buy.quiver = 1.0
 AhBot.PricingStrategy.quiver = buyOnlyRare
 
-AhBot.PricingStrategy.container = buyOnlyRare
 AhBot.MaxAuctionCount.container.white = 6
 AhBot.MaxAuctionCount.container.green = 2
 AhBot.MaxAuctionCount.container.blue = 2
-AhBot.PriceMultiplier.Sell.container = 5.0
-AhBot.PriceMultiplier.Buy.container = 5.0
+AhBot.PriceMultiplier.Sell.container = 1.0
+AhBot.PriceMultiplier.Buy.container = 1.0
 
 #
 # Glyph
 #
 
 AhBot.MaxAuctionCount.glyph.white = 50
-AhBot.MaxAuctionCount.glyph.green = 1
-AhBot.MaxAuctionCount.glyph.blue = 1
-AhBot.PriceMultiplier.Sell.glyph = 3.0
-AhBot.PriceMultiplier.Buy.glyph = 3.0
+AhBot.MaxAuctionCount.glyph.green = 20
+AhBot.MaxAuctionCount.glyph.blue = 10
+AhBot.PriceMultiplier.Sell.glyph = 1.0
+AhBot.PriceMultiplier.Buy.glyph = 1.0
 
 #
 # Quest
@@ -86,23 +92,23 @@ AhBot.PriceMultiplier.Buy.quest = 1.0
 # Consumables
 #
 
-AhBot.MaxAuctionCount.alchemy.white = 25
-AhBot.MaxAuctionCount.alchemy.green = 10
-AhBot.MaxAuctionCount.alchemy.blue = 5
-AhBot.PriceMultiplier.Sell.alchemy = 3.0
-AhBot.PriceMultiplier.Buy.alchemy = 3.0
+AhBot.MaxAuctionCount.alchemy.white = 50
+AhBot.MaxAuctionCount.alchemy.green = 20
+AhBot.MaxAuctionCount.alchemy.blue = 10
+AhBot.PriceMultiplier.Sell.alchemy = 1.0
+AhBot.PriceMultiplier.Buy.alchemy = 1.0
 
-AhBot.MaxAuctionCount.scroll.white = 20
+AhBot.MaxAuctionCount.scroll.white = 40
 AhBot.MaxAuctionCount.scroll.green = 6
 AhBot.MaxAuctionCount.scroll.blue = 4
-AhBot.PriceMultiplier.Sell.scroll = 3.0
-AhBot.PriceMultiplier.Buy.scroll = 3.0
+AhBot.PriceMultiplier.Sell.scroll = 1.0
+AhBot.PriceMultiplier.Buy.scroll = 1.0
 
-AhBot.MaxAuctionCount.Food.white = 20
-AhBot.PriceMultiplier.Sell.Food = 3.0
-AhBot.PriceMultiplier.Buy.Food = 3.0
+AhBot.MaxAuctionCount.Food.white = 40
+AhBot.PriceMultiplier.Sell.Food = 1.0
+AhBot.PriceMultiplier.Buy.Food = 1.0
 
-AhBot.MaxAuctionCount.OtherConsumable.white = 20
+AhBot.MaxAuctionCount.OtherConsumable.white = 40
 AhBot.MaxAuctionCount.OtherConsumable.green = 10
 AhBot.MaxAuctionCount.OtherConsumable.blue = 5
 AhBot.PriceMultiplier.Sell.OtherConsumable = 1.0
@@ -112,19 +118,19 @@ AhBot.PriceMultiplier.Buy.OtherConsumable = 1.0
 # Recipe
 #
 
-AhBot.MaxAuctionCount.recipe.white = 6
+AhBot.MaxAuctionCount.recipe.white = 8
 AhBot.MaxAuctionCount.recipe.green = 4
 AhBot.MaxAuctionCount.recipe.blue = 2
-AhBot.MaxAuctionCount.recipe.epic = 1
-AhBot.PriceMultiplier.Sell.recipe = 3.0
-AhBot.PriceMultiplier.Buy.recipe = 3.0
+AhBot.MaxAuctionCount.recipe.epic = 2
+AhBot.PriceMultiplier.Sell.recipe = 1.0
+AhBot.PriceMultiplier.Buy.recipe = 1.0
 
 #
 # Trade
 #
 
-AhBot.MaxAuctionCount.Elemental.white = 20
-AhBot.MaxAuctionCount.Elemental.green = 10
+AhBot.MaxAuctionCount.Elemental.white = 30
+AhBot.MaxAuctionCount.Elemental.green = 20
 AhBot.MaxAuctionCount.Elemental.blue = 6
 AhBot.PriceMultiplier.Sell.Elemental = 1.0
 AhBot.PriceMultiplier.Buy.Elemental = 1.0
@@ -162,20 +168,20 @@ AhBot.MaxAuctionCount.Engineering.blue = 4
 AhBot.PriceMultiplier.Sell.Engineering = 1.0
 AhBot.PriceMultiplier.Buy.Engineering = 1.0
 
-AhBot.MaxAuctionCount.Disenchants.white = 5
+AhBot.MaxAuctionCount.Disenchants.white = 40
 AhBot.MaxAuctionCount.Disenchants.green = 20
 AhBot.MaxAuctionCount.Disenchants.blue = 20
 AhBot.PriceMultiplier.Sell.Disenchants = 1.0
 AhBot.PriceMultiplier.Buy.Disenchants = 1.0
 
-AhBot.MaxAuctionCount.SimpleGems.green = 20
-AhBot.MaxAuctionCount.SimpleGems.blue = 10
+AhBot.MaxAuctionCount.SimpleGems.green = 30
+AhBot.MaxAuctionCount.SimpleGems.blue = 20
 AhBot.MaxAuctionCount.SimpleGems.epic = 4
 AhBot.PriceMultiplier.Sell.SimpleGems = 1.0
 AhBot.PriceMultiplier.Buy.SimpleGems = 1.0
 
-AhBot.MaxAuctionCount.SocketGems.green = 25
-AhBot.MaxAuctionCount.SocketGems.blue = 10
+AhBot.MaxAuctionCount.SocketGems.green = 50
+AhBot.MaxAuctionCount.SocketGems.blue = 20
 AhBot.MaxAuctionCount.SocketGems.epic = 4
 AhBot.PriceMultiplier.Sell.SocketGems = 1.0
 AhBot.PriceMultiplier.Buy.SocketGems = 1.0
