--- a/cmangos/realmd.conf
+++ b/cmangos/realmd.conf
@@ -98,7 +98,7 @@ ConfVersion=2010062001
 #
 ###################################################################################################################
 
-LoginDatabaseInfo = "127.0.0.1;3306;root;1;wotlk_realm"
+LoginDatabaseInfo = "127.0.0.1;3306;root;1;cmangos_realm"
 LogsDir = ""
 MaxPingTime = 30
 RealmServerPort = 3724
