--- a/mangoszero/Plaguelands/ahbot.conf
+++ b/mangoszero/Plaguelands/ahbot.conf
@@ -20,7 +20,9 @@ AhBot.Enabled = 1
 AhBot.Account = 6
 AhBot.GUID = 1
 
-AhBot.MaxItemLevel = 9999
+AhBot.MaxItemLevel = 70
+AhBot.MaxRequiredLevel = 60
+
 
 AhBot.PriceMultiplier = 1.0
 AhBot.DefaultMinPrice = 20
