--- a/mangoszero/realmd.conf
+++ b/mangoszero/realmd.conf
@@ -98,7 +98,7 @@ ConfVersion=2010062001
 #
 ###################################################################################################################
 
-LoginDatabaseInfo = "127.0.0.1;3306;root;1;zero_realm"
+LoginDatabaseInfo = "127.0.0.1;3306;root;1;mangoszero_realm"
 LogsDir = ""
 MaxPingTime = 30
 RealmServerPort = 3724
