--- a/mangoszero/Plaguelands/mangosd.conf
+++ b/mangoszero/Plaguelands/mangosd.conf
@@ -62,9 +62,9 @@ ConfVersion=2010100901
 RealmID = 1
 DataDir = ".."
 LogsDir = ""
-LoginDatabaseInfo     = "127.0.0.1;3306;root;1;zero_realm"
-WorldDatabaseInfo     = "127.0.0.1;3306;root;1;zero_world"
-CharacterDatabaseInfo = "127.0.0.1;3306;root;1;zero_characters"
+LoginDatabaseInfo     = "127.0.0.1;3306;root;1;mangoszero_realm"
+WorldDatabaseInfo     = "127.0.0.1;3306;root;1;mangoszero_world"
+CharacterDatabaseInfo = "127.0.0.1;3306;root;1;mangoszero_characters"
 LoginDatabaseConnections = 1
 WorldDatabaseConnections = 1
 CharacterDatabaseConnections = 1
