--- a/mangosone/Outland/mangosd.conf
+++ b/mangosone/Outland/mangosd.conf
@@ -62,9 +62,9 @@ ConfVersion=2010100901
 RealmID = 1
 DataDir = ".."
 LogsDir = ""
-LoginDatabaseInfo     = "127.0.0.1;3306;root;1;one_realm"
-WorldDatabaseInfo     = "127.0.0.1;3306;root;1;one_world"
-CharacterDatabaseInfo = "127.0.0.1;3306;root;1;one_characters"
+LoginDatabaseInfo     = "127.0.0.1;3306;root;1;mangosone_realm"
+WorldDatabaseInfo     = "127.0.0.1;3306;root;1;mangosone_world"
+CharacterDatabaseInfo = "127.0.0.1;3306;root;1;mangosone_characters"
 LoginDatabaseConnections = 1
 WorldDatabaseConnections = 1
 CharacterDatabaseConnections = 1
@@ -356,7 +356,7 @@ LogLevel = 1
 LogTime = 0
 LogFile = "Server.log"
 LogTimestamp = 0
-LogFileLevel = 2
+LogFileLevel = 3
 LogFilter_AchievementUpdates = 1
 LogFilter_CreatureMoves = 1
 LogFilter_TransportMoves = 1
