--- a/mangosone/Outland/scriptdev2.conf
+++ b/mangosone/Outland/scriptdev2.conf
@@ -2,7 +2,7 @@
 # This file must be placed within the directory which holds mangosd.conf and realmd.conf
 
 [ScriptDev2Conf]
-ConfVersion=2010062001
+ConfVersion=2012112301
 
 # Database connection settings for the world server.
 # Default: hostname;port;username;password;database
@@ -10,4 +10,4 @@ ConfVersion=2010062001
 #                Named pipes: mySQL required adding "enable-named-pipe" to [mysqld] section my.ini
 #          .;/path/to/unix_socket;username;password;database - use Unix sockets at Unix/Linux
 #                Unix sockets: experimental, not tested
-ScriptDevZeroDatabaseInfo     = "127.0.0.1;3306;root;1;one_scripts"
+ScriptDev2DatabaseInfo     = "127.0.0.1;3306;root;1;mangosone_scripts"
