--- a/r2/Crystalsong/aiplayerbot.conf
+++ b/r2/Crystalsong/aiplayerbot.conf
@@ -8,3 +8,4 @@ ConfVersion=2010102201
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.RandomBotMinLevel = 70
