--- a/r2/Eversong/aiplayerbot.conf
+++ b/r2/Eversong/aiplayerbot.conf
@@ -8,3 +8,6 @@ ConfVersion=2010102201
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.RandomChangeMultiplier = 1
+AiPlayerbot.MinRandomBots = 200
+AiPlayerbot.MaxRandomBots = 300
