--- a/r2/Eversong/mangosd.conf
+++ b/r2/Eversong/mangosd.conf
@@ -3,7 +3,7 @@
 #####################################
 
 [MangosdConf]
-ConfVersion=2010100901
+ConfVersion=2013012201
 
 ###################################################################################################################
 # CONNECTIONS AND DIRECTORIES
@@ -21,7 +21,6 @@ ConfVersion=2010100901
 #        Important: Logs dir must exists, or all logs need to be disabled
 #        Default: "" - no log directory prefix. if used log names aren't absolute paths
 #                      then logs will be stored in the current directory of the running program.
-#
 #
 #    LoginDatabaseInfo
 #    WorldDatabaseInfo
@@ -152,6 +151,12 @@ BindIP = "127.0.0.1"
 #        Default: 1 (Enabled)
 #                 0 (Disabled)
 #
+#    vmap.Dynamic.DoubleCheck
+#        Enable/Disable dynamic VMap based double check for LOS (needed for "In GO state").
+#        Requires Vmaps && Dynamic VMaps enabled to work. May heavily increase CPU usage!
+#        Default: 0 (Disabled)
+#                 1 (Enabled)
+#
 #
 #    DetectPosCollision
 #        Check final move position, summon position, etc for visible collision with other objects or
@@ -228,6 +233,18 @@ BindIP = "127.0.0.1"
 #        Min:     5    ( less then 3 - objects not be loaded anyway )
 #        Max:     1000 ( value more may cause false-freeze detection )
 #
+#    Calendar.RemoveExpiredEvents
+#        Delay (in hours) to remove expired events from the calendar.
+#        Default: -1  (never)
+#                  0  (at once)
+#                  1+ (delay hours (8760 - one year))
+#
+#    MapUpdate.PositionUpdateDelay
+#        Time (in ms!) for recalculation unit/GO position while spline movement.
+#        Default: 400 (0,4s)
+#        Min:     100 ( 1 MapUpdate cycle)
+#        Max:     2000( 2s)
+#
 ###################################################################################################################
 
 UseProcessors = 0
@@ -236,7 +253,7 @@ Compression = 1
 PlayerLimit = 100
 SaveRespawnTimeImmediately = 1
 MaxOverspeedPings = 2
-GridUnload = 0
+GridUnload = 1
 GridCleanUpDelay = 300000
 MapUpdateInterval = 100
 ChangeWeatherInterval = 1200000
@@ -254,13 +271,16 @@ MaxCoreStuckTime = 0
 AddonChannel = 1
 CleanCharacterDB = 1
 WorldState.ExpireTime = 604800
-MapUpdate.Threads = 6
+MapUpdate.Threads = 1
 MapUpdate.DynamicThreadsCount = 0
 MapUpdate.LoadBalanceHighValue = 0.8
 MapUpdate.LoadBalanceLowValue = 0.2
 MapUpdate.MaxVisitorsInUpdate = 9
 MapUpdate.MaxVisitsInUpdate = 10
 ObjectLoadingSplitter.MaxAllowedTime = 10
+Calendar.RemoveExpiredEvents = -1
+MapUpdate.PositionUpdateDelay = 400
+vmap.Dynamic.DoubleCheck = 1
 
 ###################################################################################################################
 # SERVER LOGGING
@@ -311,6 +331,9 @@ ObjectLoadingSplitter.MaxAllowedTime = 10
 #    LogFilter_DbStrictedCheck
 #    LogFilter_SQLText
 #    LogFilter_Pathfinding
+#    LogFilter_Calendar
+#    LogFilter_MapsLoading
+#    LogFilter_EventAiDev
 #        Log filters (active by default - meaning: the filter is active, hence the log is not displayed)
 #        Default: 1 - not include with any log level
 #                 0 - include in log if log level permit
@@ -338,6 +361,10 @@ ObjectLoadingSplitter.MaxAllowedTime = 10
 #    DBErrorLogFile
 #        Log file of DB errors detected at server run
 #        Default: "DBErrors.log"
+#
+#    EventAIErrorLogFile
+#        Log file of EventAI errors detected at server run
+#        Default: "EventAIErrors.log"
 #
 #    CharLogFile
 #        Character operations logfile name
@@ -393,16 +420,19 @@ LogTime = 1
 LogFile = "Server.log"
 LogTimestamp = 0
 LogFileLevel = 2
-LogFilter_AchievementUpdates = 0
+LogFilter_AchievementUpdates = 1
 LogFilter_CreatureMoves = 1
 LogFilter_TransportMoves = 1
-LogFilter_VisibilityChanges = 1
-LogFilter_Weather = 0
-LogFilter_DbStrictedCheck = 1
-LogFilter_Pathfinding = 1
-LogFilter_PeriodicAffects = 1
 LogFilter_PlayerMoves = 1
+LogFilter_VisibilityChanges = 1
+LogFilter_Weather = 1
+LogFilter_DbStrictedCheck = 1
 LogFilter_SQLText = 1
+LogFilter_Pathfinding = 1
+LogFilter_Calendar = 1
+LogFilter_MapLoading = 1
+LogFilter_EventAiDev = 1
+LogFilter_PeriodicAffects = 1
 LogFilter_AIAndMovegens = 1
 LogFilter_PlayerStats = 1
 LogFilter_Damage = 1
@@ -411,6 +441,7 @@ LogFilter_SpellCast = 1
 WorldLogFile = ""
 WorldLogTimestamp = 0
 DBErrorLogFile = "DBErrors.log"
+EventAIErrorLogFile = "EventAIErrors.log"
 CharLogFile = "Char.log"
 CharLogTimestamp = 0
 CharLogDump = 0
@@ -421,82 +452,140 @@ RaLogFile = ""
 LogColors = ""
 
 ###################################################################################################################
-#   LEXICS CUTTER SYSTEM
+# CHAT LOG AND LEXICS CUTTER SYSTEM
 #
-#    Chat log parameters
-#        ChatLogEnable = 0
+#    ChatLogMethod
+#        Default: 0 (Disabled)
+#                 1 (Log to files)
+#                 2 (Log to DB by SQL)
 #
-#    If this is enabled, all $d in file names are replaced with current date
-#    This does include innormative lexics log
-#        ChatLogDateSplit = 1
-#    If this is enabled, UTF8 header is written into new files
-#        ChatLogUTFHeader = 1
-#    If this is enabled, chat log will ignore messages with unprintable chars
-#        ChatLogIgnoreUnprintable = 1
+#    ChatLogDateSplit
+#        If this is enabled, all $d in file names are replaced with current date
+#        This does include innormative lexics log
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
 #
-#    Chat log files
-#        ChatLogChatFile = main_chat-$d.log
-#        ChatLogPartyFile = party_chat-$d.log
-#        ChatLogGuildFile = guild_chat-$d.log
-#        ChatLogWhisperFile = whisper_chat-$d.log
-#        ChatLogChannelFile = channel_chat-$d.log
-#        ChatLogRaidFile = raid_chat-$d.log
-#        ChatLogBattleGroundFile = bg_chat-$d.log
+#    ChatLogUTFHeader
+#        If this is enabled, UTF8 header is written into new files
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
 #
-#    Chat log screen logging
-#        ChatLogChatScreen = 0
-#        ChatLogPartyScreen = 0
-#        ChatLogGuildScreen = 0
-#        ChatLogWhisperScreen = 0
-#        ChatLogChannelScreen = 0
-#        ChatLogRaidScreen = 0
-#        ChatLogBattleGroundScreen = 0
+#    ChatLogIgnoreUnprintable
+#        If this is enabled, chat log will ignore messages with unprintable chars
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
 #
-#    Lexics cutter parameters
-#        LexicsCutterEnable = 1
-#        LexicsCutterInnormativeCut = 1
-#        LexicsCutterCutReplacement = &!@^%!^&*!!!
-#        LexicsCutterLogFile = innormative-$d.log
-#        LexicsCutterScreenLog = 0
-#        LexicsCutterAnalogsFile = letter_analogs.txt
-#        LexicsCutterWordsFile = innormative_words.txt
+#    ChatLogsDirectory
+#        Chat log directory name
+#        Default: ""
 #
-#    Where to cut lexics
-#        LexicsCutInChat = 1
-#        LexicsCutInParty = 1
-#        LexicsCutInGuild = 1
-#        LexicsCutInWhisper = 1
-#        LexicsCutInChannel = 1
-#        LexicsCutInRaid = 1
-#        LexicsCutInBattleGround = 1
+#    ChatLogChatFile
+#    ChatLogPartyFile
+#    ChatLogGuildFile
+#    ChatLogWhisperFile
+#    ChatLogChannelFile
+#    ChatLogRaidFile
+#    ChatLogBattleGroundFile
+#        Chat log file names
+#        Default:
+#                 main_chat-$d.log
+#                 party_chat-$d.log
+#                 guild_chat-$d.log
+#                 whisper_chat-$d.log
+#                 channel_chat-$d.log
+#                 raid_chat-$d.log
+#                 bg_chat-$d.log
 #
-#    Ignore word spaces like: W O R D
-#        LexicsCutterIgnoreSpaces = 1
+#    ChatLogChatScreen
+#    ChatLogPartyScreen
+#    ChatLogGuildScreen
+#    ChatLogWhisperScreen
+#    ChatLogChannelScreen
+#    ChatLogRaidScreen
+#    ChatLogBattleGroundScreen
+#        Include log in server console output
+#        Default: 0 (Disabled)
+#                 1 (Enabled)
 #
-#    Ignore repeats like: WWOOOORRRRRD
-#        LexicsCutterIgnoreRepeats = 1
+#    LexicsCutterEnable
+#        Default: 0 (Disabled)
+#                 1 (Enabled)
 #
-#    Action:
-#    ---   0: log only
-#    ---   1: sheep
-#    ---   2: stun
-#    ---   3: kill
-#    ---   4: leave 5 health
-#    ---   5: disable chat
-#    ---   6: stuck (works as stun + 50% health)
-#    ---   7: resurrection sickness
-#    ---   8: shear
-#        LexicsCutterAction = 0
-#        LexicsCutterActionDuration = 60000
+#    LexicsCutterInnormativeCut
+#        Cutting innormative lexics
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
 #
-#     Do not perform action on GM if this is enabled
-#        LexicsCutterNoActionOnGM = 1
+#    LexicsCutterCutReplacement
+#        Replace cutting innormative lexics with this
+#        Default: &!@^%!^&*!!!
+#
+#    LexicsCutterLogFile
+#        Innormative lexics log file name
+#        Default: innormative-$d.log
+#
+#    LexicsCutterScreenLog
+#        Include log in server console output
+#        Default: 0 (Disabled)
+#                 1 (Enabled)
+#
+#    LexicsCutterAnalogsFile
+#        letter analogs file name
+#        Default: letter_analogs.txt
+#
+#    LexicsCutterWordsFile
+#        Words file name
+#        Default: innormative_words.txt
+#
+#    LexicsCutInChat
+#    LexicsCutInParty
+#    LexicsCutInGuild
+#    LexicsCutInWhisper
+#    LexicsCutInChannel
+#    LexicsCutInRaid
+#    LexicsCutInBattleGround
+#        Where to cut lexics
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
+#
+#    LexicsCutterIgnoreSpaces
+#        Ignore word spaces like: W O R D
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
+#
+#    LexicsCutterIgnoreRepeats
+#        Ignore repeats like: WWOOOORRRRRD
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
+#
+#    LexicsCutterAction
+#        Action
+#        Default: 0: log only
+#                 1: sheep
+#                 2: stun
+#                 3: kill
+#                 4: leave 5 health
+#                 5: disable chat
+#                 6: stuck (works as stun + 50% health)
+#                 7: resurrection sickness
+#                 8: shear
+#
+#    LexicsCutterActionDuration
+#        Action duration
+#        Default: 60000
+#
+#    LexicsCutterNoActionOnGM
+#        Do not perform action on GM if this is enabled
+#        Default: 1 (Enabled)
+#                 0 (Disabled)
+#
 ###################################################################################################################
 
-ChatLogEnable = 0
+ChatLogMethod = 0
 ChatLogDateSplit = 1
 ChatLogUTFHeader = 1
 ChatLogIgnoreUnprintable = 1
+ChatLogsDirectory = ""
 ChatLogChatFile = main_chat-$d.log
 ChatLogPartyFile = party_chat-$d.log
 ChatLogGuildFile = guild_chat-$d.log
@@ -530,6 +619,7 @@ LexicsCutterIgnoreRepeats = 1
 LexicsCutterAction = 0
 LexicsCutterActionDuration = 60000
 LexicsCutterNoActionOnGM = 1
+
 
 ###################################################################################################################
 # SERVER SETTINGS
@@ -734,11 +824,16 @@ LexicsCutterNoActionOnGM = 1
 #        Max amount triggered spell casts in chain by one caster, prevent stack overflow crash
 #        Too Low value will make some correct triggered casts fail
 #                 0 (no limit)
-#        Default: 10
+#        Default: 20
 #
 #   BirthdayTime
 #        Set to birthday (date in unix time), By default 28th August 2005, when MaNGOS got it's name
 #        Default: 1125180000
+#
+#   RabbitDay
+#        Set to Rabbit Day (date in unix time), only the day and month are considered, the year is not important
+#        Default: 0 (off)
+#        Suggested: 954547200 (April 1st, 2000)
 #
 #    Instance.IgnoreLevel
 #        Ignore level requirement to enter instance
@@ -961,6 +1056,16 @@ LexicsCutterNoActionOnGM = 1
 #        Default: 0 - false
 #                 1 - true -> not blizzlike
 #
+#    Resistance.CalculationMethod
+#        Method of resistance calculation.
+#                 0 (TBC,   resistance chance - 0%, 25%, 50%, 75% or 100%)
+#        Default: 1 (WOTLK, flat resistance chance - 0%, 10%, 20%, 30% ... 100%)
+#
+#    Resistance.AddByOverLevel
+#        If the target level is greater than caster level, add to target additional resistance points.
+#        Default: 0 - disabled (don't add additional resistance points)
+#                 1 - enabled  (add to target 5 resistance points on each target over level)
+#
 ###################################################################################################################
 
 GameType = 1
@@ -995,12 +1100,13 @@ AllFlightPaths = 0
 AlwaysMaxSkillForLevel = 0
 ActivateWeather = 1
 CastUnstuck = 1
-MaxSpellCastsInChain = 10
+MaxSpellCastsInChain = 20
 BirthdayTime = 1125180000
+RabbitDay = 0
 Instance.IgnoreLevel = 0
 Instance.IgnoreRaid = 0
 Instance.ResetTimeHour = 4
-Instance.UnloadDelay = 10000000000
+Instance.UnloadDelay = 1800000
 Quests.LowLevelHideDiff = 4
 Quests.HighLevelHideDiff = 7
 Quests.Daily.ResetHour = 6
@@ -1045,6 +1151,8 @@ AllowTransferToCustomMap = 0
 ResilenceAlternativeCalculation = 0
 BlinkAnimationType = 0
 FactiomAndRaceChangeWithoutRenaming = 0
+Resistance.CalculationMethod = 1
+Resistance.AddByOverLevel = 0
 
 ###################################################################################################################
 # PLAYER INTERACTION
@@ -1060,8 +1168,9 @@ FactiomAndRaceChangeWithoutRenaming = 0
 #    AllowTwoSide.Interaction.Guild
 #    AllowTwoSide.Interaction.Auction
 #    AllowTwoSide.Interaction.Mail
+#    AllowTwoSide.Interaction.Calendar
 #        Allow or not common :chat(say,yell);channel(chat)group(join)guild(join);merge all auction houses for players from
-#        different teams, send mail to different team.
+#        different teams, send mail to different team, calendar(invite player from different team)
 #        Default: 0 (Not allowed)
 #                 1 (Allowed)
 #
@@ -1090,9 +1199,11 @@ AllowTwoSide.Interaction.Group = 0
 AllowTwoSide.Interaction.Guild = 0
 AllowTwoSide.Interaction.Auction = 0
 AllowTwoSide.Interaction.Mail = 0
+AllowTwoSide.Interaction.Calendar = 0
 AllowTwoSide.WhoList = 0
 AllowTwoSide.AddFriend = 0
 TalentsInspecting = 1
+
 
 ###################################################################################################################
 # AUTO BROADCAST
@@ -1802,8 +1913,7 @@ Arena.AutoDistributePoints = 0
 Arena.AutoDistributeInterval = 7
 Arena.QueueAnnouncer.Join = 0
 Arena.QueueAnnouncer.Exit = 0
-Arena.ArenaSeason.ID = 1
-Arena.ArenaSeasonPrevious.ID = 0
+Arena.QueueAnnouncer.Start = 0
 Arena.StartRating = -1
 Arena.StartPersonalRating = -1
 Arena.LoserNoChange = 0
@@ -2137,7 +2247,7 @@ LFG.DisableDungeonMapIds= ""
 #        Default: 1000 (1 sec)
 #
 ###################################################################################################################
-VMSS.Enable = 1
+VMSS.Enable = 0
 VMSS.MaxThreadBreaks = 5
 VMSS.ThreadBreakRememberTime = 600
 VMSS.MapFreeMethod = 1
