--- a/r2/Wetlands/aiplayerbot.conf
+++ b/r2/Wetlands/aiplayerbot.conf
@@ -8,4 +8,7 @@ ConfVersion=2010102201
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
-iPlayerbot.RandomBotMinLevel = 20
+AiPlayerbot.RandomBotMinLevel = 20
+AiPlayerbot.RandomChangeMultiplier = 1
+AiPlayerbot.MinRandomBots = 200
+AiPlayerbot.MaxRandomBots = 300
