--- a/r2/Eversong/aiplayerbot.conf
+++ b/r2/Eversong/aiplayerbot.conf
@@ -11,3 +11,4 @@ AiPlayerbot.RandomBotJoinLfg = 1
 AiPlayerbot.RandomChangeMultiplier = 1
 AiPlayerbot.MinRandomBots = 200
 AiPlayerbot.MaxRandomBots = 300
+AiPlayerbot.RandomBotMaps = 0,1
