--- a/r2/Wetlands/ahbot.conf
+++ b/r2/Wetlands/ahbot.conf
@@ -27,6 +27,7 @@ AhBot.PriceMultiplier = 1.0
 AhBot.DefaultMinPrice = 20
 AhBot.PriceQualityMultiplier = 1.0
 AhBot.AlwaysAvailableMoney = 2000000
+AhBot.IgnoreItemIds = 49283,52200,8494,6345,6891,2460,37164
 
 #
 # Items
