--- a/r2/Wetlands/aiplayerbot.conf
+++ b/r2/Wetlands/aiplayerbot.conf
@@ -12,3 +12,4 @@ AiPlayerbot.RandomBotMinLevel = 20
 AiPlayerbot.RandomChangeMultiplier = 1
 AiPlayerbot.MinRandomBots = 200
 AiPlayerbot.MaxRandomBots = 300
+AiPlayerbot.RandomBotMaps = 0,1
