--- a/r2/Plaguelands/aiplayerbot.conf
+++ b/r2/Plaguelands/aiplayerbot.conf
@@ -8,3 +8,8 @@ ConfVersion=2010102201
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.RandomBotMinLevel = 50
+AiPlayerbot.RandomChangeMultiplier = 1
+AiPlayerbot.MinRandomBots = 200
+AiPlayerbot.MaxRandomBots = 300
+AiPlayerbot.RandomBotMaps = 0,1
