--- a/r2/Plaguelands/mangosd.conf
+++ b/r2/Plaguelands/mangosd.conf
@@ -65,9 +65,9 @@ LogsDir = ""
 LoginDatabaseInfo     = "127.0.0.1;3306;root;1;r2_realm"
 WorldDatabaseInfo     = "127.0.0.1;3306;root;1;r2_world"
 CharacterDatabaseInfo = "127.0.0.1;3306;root;1;r2_characters_60"
-LoginDatabaseConnections = 1
-WorldDatabaseConnections = 1
-CharacterDatabaseConnections = 1
+LoginDatabaseConnections = 10
+WorldDatabaseConnections = 10
+CharacterDatabaseConnections = 10
 MaxPingTime = 30
 WorldServerPort = 8005
 BindIP = "127.0.0.1"
@@ -205,7 +205,7 @@ Compression = 1
 PlayerLimit = 100
 SaveRespawnTimeImmediately = 1
 MaxOverspeedPings = 2
-GridUnload = 0
+GridUnload = 1
 GridCleanUpDelay = 30000000000
 MapUpdateInterval = 100
 ChangeWeatherInterval = 1200000
@@ -225,6 +225,16 @@ UpdateUptimeInterval = 10
 MaxCoreStuckTime = 0
 AddonChannel = 1
 CleanCharacterDB = 1
+MapUpdate.Threads = 3
+MapUpdate.DynamicThreadsCount = 0
+MapUpdate.LoadBalanceHighValue = 0.8
+MapUpdate.LoadBalanceLowValue = 0.2
+MapUpdate.MaxVisitorsInUpdate = 9
+MapUpdate.MaxVisitsInUpdate = 10
+ObjectLoadingSplitter.MaxAllowedTime = 10
+Calendar.RemoveExpiredEvents = -1
+MapUpdate.PositionUpdateDelay = 400
+vmap.Dynamic.DoubleCheck = 1
 
 ###################################################################################################################
 # SERVER LOGGING
@@ -1729,3 +1739,89 @@ CharDelete.Method = 0
 CharDelete.MinLevel = 0
 CharDelete.KeepDays = 30
 
+
+###################################################################################################################
+#    LFG Dungeon finder system
+#
+#    LFR.Enable              = 0
+#        enabling Raid finder
+#    LFG.Enable              = 0
+#        enabling Dungeon finder
+#    LFG.Debug              = 0
+#        enabling Dungeon finder debug mode
+#    LFR.Extend              = 0
+#        enabling Raid finder extended operations (not blizzlike!)
+#    LFG.MaxKicks            = 5
+#        max number of kick from group before group disband
+#    LFG.OnlyLastEncounterForCompleteDungeon = 0
+#        need complete only last encounter for dungeon complete (not blizzlike!)
+#    LFG.DisableDungeonMapIds
+#        If maybe a dungeon is buggy or something you can disable this
+#        default:            = ""
+#
+###################################################################################################################
+LFR.Enable              = 1
+LFG.Enable              = 1
+LFG.Debug               = 0
+LFR.Extend              = 0
+LFG.MaxKicks            = 5
+LFG.OnlyLastEncounterForCompleteDungeon = 0
+LFG.DisableDungeonMapIds= ""
+
+
+###################################################################################################################
+# Virtual map serving system (VMSS) configuration
+#
+#    VMSS.Enable
+#        Enabling VMSS support (signals handling)
+#        Default: 0 - off
+#                 1 - on
+#
+#    VMSS.MaxThreadBreaks
+#        Maximum single instance map fails before stopping world
+#        Default: 5
+#
+#    VMSS.ThreadBreakRememberTime
+#        Time (in seconds) before cleaning counter of MaxThreadBreaks
+#        Default: 3600 (1 hour)
+#
+#    VMSS.MapFreeMethod
+#        Method for freeing breaked map
+#        0 - safe cleaning (clean auras, save and logout player)
+#        1 - not safe cleaning (kick players, not clean auras, not save players/worldstates)
+#        2 - not safe cleaning (another type - logout players without save)
+#        Default: 0
+#
+#    VMSS.FreezeCheckPeriod
+#        Time period (in milliseconds) for activate FreezeDetect thread
+#        Default: 1000 (1 sec) - default mangos freeze detect period.
+#
+#    VMSS.MapFreezeDetectTime
+#        Time (in milliseconds) for detect freeze in map thread
+#        Default: 1000 (1 sec)
+#
+###################################################################################################################
+VMSS.Enable = 0
+VMSS.MaxThreadBreaks = 5
+VMSS.ThreadBreakRememberTime = 600
+VMSS.MapFreeMethod = 1
+VMSS.FreezeCheckPeriod = 1000
+VMSS.MapFreezeDetectTime = 2000
+VMSS.TrySkipFirstThreadBreak = 1
+VMSS.ForceUnloadDelay = 3000
+
+###################################################################################################################
+#    Duel Reset System
+#
+#    DuelReset.Enable
+#        Enable duel reset script that resets all Arena Cooldows, set full hp/mana and erase all debuffs. (Need complete DuelReset.areaIds) -- Not Blizzlike
+#        Default: 0 (disabled)
+#                 1 (enabled)
+#
+#    DuelReset.AreaIds
+#        List of area's ids where Duel Reset Script will be enabled. With delimiter ','. You can lookup areas going with a GM to X zone and typing .gps
+#        Default: "12,14,4570" Outdoor Stormwind, Outdoor Orgrimmar, Dalaran's Circle of Wills 
+#
+###################################################################################################################
+DuelReset.Enable = 0
+DuelReset.AreaIds = "12,14,4570"
