--- a/r2/Testing/mangosd.conf
+++ b/r2/Testing/mangosd.conf
@@ -58,17 +58,17 @@ ConfVersion=2013012201
 #
 ###################################################################################################################
 
-RealmID = 4
+RealmID = 92
 DataDir = ".."
 LogsDir = ""
 LoginDatabaseInfo     = "127.0.0.1;3306;root;1;r2_realm"
-WorldDatabaseInfo     = "127.0.0.1;3306;root;1;r2_world"
-CharacterDatabaseInfo = "127.0.0.1;3306;root;1;r2_characters_20"
+WorldDatabaseInfo     = "127.0.0.1;3306;root;1;r2_world_testing"
+CharacterDatabaseInfo = "127.0.0.1;3306;root;1;r2_characters_testing"
 LoginDatabaseConnections = 10
 WorldDatabaseConnections = 10
 CharacterDatabaseConnections = 10
 MaxPingTime = 30
-WorldServerPort = 8006
+WorldServerPort = 8011
 BindIP = "127.0.0.1"
 
 ###################################################################################################################
