--- a/tc/Eversong/aiplayerbot.conf
+++ b/tc/Eversong/aiplayerbot.conf
@@ -2,17 +2,19 @@
 # MANGOS Ai Playerbot Configuration file #
 ##########################################
 
-[AiPlayerbotConf]
+[aiplayerbot]
 ConfVersion=2010102201
 
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.RandomBotAutologin = 1
 AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
 AiPlayerbot.MinRandomBots = 200
 AiPlayerbot.MaxRandomBots = 300
 AiPlayerbot.RandomBotMaps = 0,1
+AiPlayerbot.CommandPrefix = ~
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
