--- a/tc/Testing/aiplayerbot.conf
+++ b/tc/Testing/aiplayerbot.conf
@@ -8,11 +8,13 @@ ConfVersion=2010102201
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.RandomBotAutologin = 0
 AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
-AiPlayerbot.MinRandomBots = 200
-AiPlayerbot.MaxRandomBots = 300
+AiPlayerbot.MinRandomBots = 1
+AiPlayerbot.MaxRandomBots = 2
 AiPlayerbot.RandomBotMaps = 0,1
+AiPlayerbot.CommandPrefix = ~
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
