tc -> other realms

--- a/r2/Crystalsong/mangosd.conf
+++ b/r2/Crystalsong/mangosd.conf
@@ -64,7 +64,7 @@ DataDir = ".."
 LogsDir = ""
 LoginDatabaseInfo     = "127.0.0.1;3306;root;1;r2_realm"
 WorldDatabaseInfo     = "127.0.0.1;3306;root;1;r2_world"
-CharacterDatabaseInfo = "127.0.0.1;3306;root;1;r2_characters"
+CharacterDatabaseInfo = "127.0.0.1;3306;root;1;r2_characters_80"
 LoginDatabaseConnections = 1
 WorldDatabaseConnections = 1
 CharacterDatabaseConnections = 1
