--- a/tc/Testing/aiplayerbot.conf
+++ b/tc/Testing/aiplayerbot.conf
@@ -5,16 +5,17 @@
 [AiPlayerbotConf]
 ConfVersion=2010102201
 
+AiPlayerbot.AllowGuildBots = 0
+AiPlayerbot.EnableGuildTasks = 1
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
-AiPlayerbot.RandomBotAutologin = 0
+AiPlayerbot.RandomBotAutologin = 1
 AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
-AiPlayerbot.MinRandomBots = 1
-AiPlayerbot.MaxRandomBots = 2
+AiPlayerbot.MinRandomBots = 250
+AiPlayerbot.MaxRandomBots = 300
 AiPlayerbot.RandomBotMaps = 0,1
-AiPlayerbot.CommandPrefix = ~
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
@@ -52,3 +53,5 @@ AiPlayerbot.RandomClassSpecProbability.9.2 = 33
 AiPlayerbot.RandomClassSpecProbability.11.0 = 10
 AiPlayerbot.RandomClassSpecProbability.11.1 = 45
 AiPlayerbot.RandomClassSpecProbability.11.2 = 45
+
+AiPlayerbot.CommandServerPort = 8888
