--- a/tc/Eversong/aiplayerbot.conf
+++ b/tc/Eversong/aiplayerbot.conf
@@ -5,6 +5,8 @@
 [aiplayerbot]
 ConfVersion=2010102201
 
+AiPlayerbot.EnableGuildTasks = 1
+
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
@@ -13,8 +15,8 @@ AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
 AiPlayerbot.MinRandomBots = 200
 AiPlayerbot.MaxRandomBots = 300
-AiPlayerbot.RandomBotMaps = 0,1
-AiPlayerbot.CommandPrefix = ~
+AiPlayerbot.RandomBotMaps = 0,1,530
+AiPlayerbot.LogInGroupOnly = 1
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
@@ -52,3 +54,7 @@ AiPlayerbot.RandomClassSpecProbability.9.2 = 33
 AiPlayerbot.RandomClassSpecProbability.11.0 = 10
 AiPlayerbot.RandomClassSpecProbability.11.1 = 45
 AiPlayerbot.RandomClassSpecProbability.11.2 = 45
+
+AiPlayerbot.CommandServerPort = 8888
+#AiPlayerbot.RandomBotCombatStrategies = +dps,+attack weak
+#AiPlayerbot.RandomBotNonCombatStrategies = +loot
