SweetFX_Settings.txt

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@ maps
 vmaps
 Crashes
 *.dist.in
-playerbot
+ai
 dump
 playerbot-utils
+tlr
+$RECYCLE.BIN
+System Volume Information
+g3
+hg
+trainz
+D3DOverrider
+Gothic3
+Risen
