--- a/tc/authserver.conf
+++ b/tc/authserver.conf
@@ -131,6 +131,26 @@ WrongPass.BanType = 0
 WrongPass.Logging = 0
 
 #
+#    SourceDirectory
+#        Description: The path to your TrinityCore source directory.
+#                     If the path is left empty, the built-in CMAKE_SOURCE_DIR is used.
+#        Example:     "../TrinityCore"
+#        Default:     ""
+
+SourceDirectory  = "C:/Users/ike/Projects/mangosbot/src"
+
+#
+#    MySQLExecutable
+#        Description: The path to your mysql cli binary.
+#                     If the path is left empty, built-in path from cmake is used.
+#        Example:     "C:/Program Files/MySQL/MySQL Server 5.6/bin/mysql.exe"
+#                     "mysql.exe"
+#                     "/usr/bin/mysql"
+#        Default:     ""
+
+MySQLExecutable = "C:/Program Files/MySQL/MySQL Server 5.5/bin/mysql.exe"
+
+#
 ###################################################################################################
 
 ###################################################################################################
@@ -189,7 +209,7 @@ Updates.EnableDatabases = 1
 #        Example:     "../TrinityCore"
 #        Default:     ""
 
-Updates.SourcePath  = "../mangosbot"
+Updates.SourcePath  = "C:/Users/ike/Projects/mangosbot/src"
 
 #
 #    Updates.MySqlCLIPath
