zero -> Tirisfal, cleanup

--- a/zero/Tirisfal/aiplayerbot.conf
+++ b/zero/Tirisfal/aiplayerbot.conf
@@ -2,17 +2,22 @@
 # MANGOS Ai Playerbot Configuration file #
 ##########################################
 
-[AiPlayerbotConf]
+[aiplayerbot]
 ConfVersion=2010102201
+
+AiPlayerbot.EnableGuildTasks = 1
 
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
-AiPlayerbot.RandomBotMinLevel = 60
+AiPlayerbot.RandomBotAutologin = 1
+AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
-AiPlayerbot.MinRandomBots = 200
-AiPlayerbot.MaxRandomBots = 300
-AiPlayerbot.RandomBotMaps = 0,1,530
+AiPlayerbot.MinRandomBots = 500
+AiPlayerbot.MaxRandomBots = 500
+AiPlayerbot.RandomBotAccountCount = 200
+AiPlayerbot.RandomBotMaps = 0,1
+AiPlayerbot.LogInGroupOnly = 1
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
@@ -50,3 +55,7 @@ AiPlayerbot.RandomClassSpecProbability.9.2 = 33
 AiPlayerbot.RandomClassSpecProbability.11.0 = 10
 AiPlayerbot.RandomClassSpecProbability.11.1 = 45
 AiPlayerbot.RandomClassSpecProbability.11.2 = 45
+
+AiPlayerbot.CommandServerPort = 8888
+#AiPlayerbot.RandomBotCombatStrategies = +dps,+attack weak
+#AiPlayerbot.RandomBotNonCombatStrategies = +loot
